--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "*/5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/fhxz.png, enabled=true, tag=富豪小镇
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
 cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=京东到家果园任务
 cron "5 */2 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit_collectWater.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=到家果园收水滴
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_bean.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=鲜豆任务
@@ -9,8 +11,11 @@ cron "0 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/m
 cron "*/5 * * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_getPoints.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=鲜豆庄园领水滴
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kxhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=开心花园
 cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/dogeda.js, img-url=https://qxzy.top/rules/QuantumultX/img/dogeda.png, enabled=true, tag=DOGEDA
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://qxzy.top/rules/QuantumultX/img/hhkk.png, enabled=true, tag=火狐看看
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bsly.js, img-url=https://ae01.alicdn.com/kf/U2fec2be787b74fb3928d83773822eef56.jpg, enabled=true, tag=百事乐元
+cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=“韧”性探索 空降好礼
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
@@ -81,7 +86,7 @@ cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/
 cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_live_redrain_half.png, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领现金自动获得酬劳
 cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_global.png, enabled=true, tag=⚠️环球挑战赛
-cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jxd.png, enabled=true, tag=京小兑
+cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_jxd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jxd.png, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, img-url=https://qxzy.top/rules/QuantumultX/img/pyq.png, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_marketLottery.png, enabled=true, tag=⚠️京东超市-大转盘
 cron "0 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, img-url=https://qxzy.top/rules/QuantumultX/img/yggy.png, enabled=true, tag=阳光果园
@@ -185,7 +190,7 @@ cron "1 8,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301
 cron "8 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东天天加速
 cron "16 22 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_small_home.js, img-url=https://qxzy.top/rules/QuantumultX/img/ddxw.png, enabled=true, tag=东东小窝
 cron "3 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_moneyTree.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdyqs.png, tag=京东摇钱树
-cron "5 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_club_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdyjd.png, tag=摇京豆
+cron "5 0,23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_club_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdyjd.png, tag=摇京豆
 cron "55 23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_unsubscribe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=取关京东店铺商品
 cron "10 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_shop.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, tag=进店领豆 
 cron "10 0,20 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_necklace.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=点点券
