--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,13 +1,15 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
+cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴出行zZPiglet
 cron "0-25/5 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_getPoints.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆庄园领水滴
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_plantBeans.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆庄园
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_bean.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆任务
 cron "5 */2 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit_collectWater.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园收水滴
 cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园任务
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
-cron "*/10 * * * *" script-path=http://nm999.cn/fhxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬富豪小镇
+cron "*/10 * * * *" script-path=http://nm66.top/fhxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬富豪小镇
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/dogeda.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=DOGEDA
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=火狐看看
@@ -20,12 +22,12 @@ cron "7 24,47 12 * * ?" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScri
 cron "10 16 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（加购）
 cron "10 16 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
-cron "25 8 * 4-5 *" script-path=https://share.r2ray.com/dust/car/z_tcl_lining.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东TCL电视自营
+cron "25 8 * 4-5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/z_tcl_lining.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东幸运大转盘0301版
 cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东健康社区收能量0301版
-cron "25 * * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_energy.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区收能量藏经阁版
+cron "25 * * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_health_energy.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区收能量藏经阁版
 cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东健康社区0301版
-cron "25 10-22/3 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_community.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区藏经阁版
+cron "25 10-22/3 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_health_community.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区藏经阁版
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/smyj.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=圣牧有机
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=新亚链
 cron "35 12,18 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xbgg.js, img-url=https://ae01.alicdn.com/kf/U466ffce93b584c5babd1127f32f5ddebX.jpg, enabled=true, tag=讯播广告
@@ -37,22 +39,22 @@ cron "1 7,12,19 * * *" script-path=https://raw.githubusercontent.com/sngxpro/Qua
 cron "20 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, img-url=https://ae01.alicdn.com/kf/Uf3f262fb6d81492a8e350a0bb97a04a0g.jpg, enabled=true, tag=久金人脉
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, img-url=https://ae01.alicdn.com/kf/Ub0056a0721e94c9a85a8bbeb2f2aed6fn.jpg, enabled=true, tag=招招试药
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/scripts/main/snjc/snjc.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=酸奶机场签到
-cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东维达品牌日
-cron "0 0 * * *" script-path=https://share.r2ray.com/dust/normal/monk_inter_shop_sign.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=interCenter渠道店铺签到
-cron "3 0,10,23 * * *" script-path=https://share.r2ray.com/dust/normal/monk_shop_lottery.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东店铺大转盘
-cron "15 15 * * *" script-path=https://share.r2ray.com/dust/normal/monk_shop_follow_sku.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东关注有礼
-cron "15 12 * * *" script-path=https://share.r2ray.com/dust/car/monk_shop_add_to_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东加购有礼
-cron "0 0,1-22/2 1-31 4-7 *" script-path=https://share.r2ray.com/dust/member/monk_pasture.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东有机牧场
-cron "10 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_xmf.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东小魔方
-cron "5 8,14,20 6-13 4 *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_mother_jump.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东母婴-跳一跳二期
-cron "3 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_fanslove.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东粉丝互动
-cron "10 10,11 * * 2-5" script-path=https://share.r2ray.com/dust/i-chenzhe/z_entertainment.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东百变大咖秀
-cron "0 0-18/6 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_carnivalcity.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东手机狂欢城
-cron "3 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_marketLottery.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东超市-大转盘
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_super5g.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东5G超级盲盒
-cron "3 20 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_shake.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东chenzhe摇一摇
+cron "15 08 5-30 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/monk_vinda.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东维达品牌日
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_inter_shop_sign.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=interCenter渠道店铺签到
+cron "3 0,10,23 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_shop_lottery.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东店铺大转盘
+cron "15 15 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_shop_follow_sku.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东关注有礼
+cron "15 12 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/monk_shop_add_to_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东加购有礼
+cron "0 0,1-22/2 1-31 4-7 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/monk_pasture.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东有机牧场
+cron "10 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_xmf.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东小魔方
+cron "5 8,14,20 6-13 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_mother_jump.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东母婴-跳一跳二期
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_fanslove.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东粉丝互动
+cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_entertainment.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东百变大咖秀
+cron "0 0-18/6 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东手机狂欢城
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_marketLottery.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东超市-大转盘
+cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_super5g.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东5G超级盲盒
+cron "3 20 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shake.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东chenzhe摇一摇
 cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/self/main/delete/gone/monk_skyworth.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东创维全勤奖(不加购)
-cron "15 08 2-18 4 *" script-path=https://share.r2ray.com/dust/car/monk_skyworth_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东创维全勤奖(加购)
+cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/ar/monk_skyworth_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东创维全勤奖(加购)
 cron "7 7 7-20 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/yqnb.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/lisha.png, enabled=true, tag=易趣牛帮
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, img-url=https://ae01.alicdn.com/kf/U7bcabce8ea7644f18e3c84f65907e34bf.jpg, enabled=true, tag=部落农场
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/nuoaier.png, enabled=true, tag=兴盛优选小程序
@@ -357,7 +359,6 @@ cron "0 30 6-23 * * ?" script-path=https://raw.githubusercontent.com/wangdelu202
 cron "0 30 0,6 * * ?" script-path=https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/newsinachaohua.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enabled=true, tag=新浪微博超话签到
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/115.png, enabled=true, tag=115
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Blibee/Blibee.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Blibee.png, enabled=true, tag=便利蜂
-cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴出行
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Domino/Domino_getSMS.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Domino.png, enabled=true, tag=达美乐
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Haidilao/Haidilao.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/haidilao.png, enabled=true, tag=海底捞
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/MovieCalendar/MovieCalendar.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/MovieCalendar.png, enabled=true, tag=电影日历
