--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,14 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
+cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级无线组队分奖品
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
+cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
+cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴出行zZPiglet
+cron "30 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会
+cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
+cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=WGC
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://qxzy.top/rules/QuantumultX/img/yt.png, enabled=true, tag=炎兔
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ggdh.png, enabled=true, tag=狗狗大亨
