--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,13 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东超级无线组队分奖品
+cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
+cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=如意花园
+cron "9 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会(查看脚本学用法)
+cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖红包
+cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖
+cron "*/10 * * * *" script-path=http://nm66.top/kxdfs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=开心大丰收
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/cglm.js, enabled=true, 
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
