--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -14,6 +14,7 @@ cron "10 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=监控crazyJoy分红
 cron "10 1,12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=crazyJoy挂机
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_egg.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdte.png, enabled=true, tag=天天提鹅
+cron "13 1,22,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=每日抽奖
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_dreamFactory.js, img-url=https://github.com/58xinian/icon/raw/master/jdgc.png, enabled=true, tag=京喜工厂
 cron "1 12,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_family.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_family.png, enabled=true, tag=京东家庭号
 cron "5 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdnc.png, enabled=true, tag=东东农场
