--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -35,7 +35,7 @@ cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_try.js, img-url=https://raw.githubusercontent.com/ZCY01/img/master/jdtryv1.png, enabled=true, tag=京东试用
-cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
+cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
 cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=幸运大转盘
@@ -79,7 +79,7 @@ cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_carni
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读
 cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️城城分现金
-cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=女装盲盒
+cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=⚠️女装盲盒
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️金口碑奖投票
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, img-url=https://qxzy.top/rules/QuantumultX/img/ygkc.png, enabled=true, tag=阳光矿场
 cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
@@ -130,7 +130,7 @@ cron "0 8 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-S
 cron "1 1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东全民开红包
 cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
 cron "30 8,13,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
-cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=京小超领蓝币
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=⚠️京小超领蓝币
 cron "10 12,18 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东物流派件提醒
 cron "0 9,12,20,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_global_mh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_global_mh.png, enabled=true, tag=京东国际盲盒
 cron "8/30 * 1-6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青阅读
