--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集
 cron "13 1,22,23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_daily_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=每日抽奖
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xffd.js, img-url=https://qxzy.top/rules/QuantumultX/img/xffd.png, enabled=true, tag=幸福饭店
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
